# routes/api.php
@@ -8,6 +8,7 @@ use App\Http\Controllers\LicenseController;
 use App\Http\Controllers\LanguageController;
 use App\Http\Controllers\RorAffiliationController;
 use App\Http\Controllers\RoleController;
+use App\Http\Controllers\VocabularyController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/changelog', [ChangelogController::class, 'index']);
@@ -43,4 +44,5 @@ Route::middleware('elmo.api-key')->get(
     [RoleController::class, 'contributorInstitutionRolesForElmo'],
 );
 Route::get('/v1/ror-affiliations', RorAffiliationController::class);
+Route::middleware('elmo.api-key')->get('/v1/vocabularies/gcmd-science-keywords', [VocabularyController::class, 'gcmdScienceKeywords']);
 Route::get('/v1/doc', ApiDocController::class);
